--- a/src/views/components/header.pug
+++ b/src/views/components/header.pug
@@ -82,6 +82,9 @@ mixin header
             .header__mobile-search
               +search-svg.header__search-svg
           .header__mobile-col
+            a.header__icon(href="#")
+              +call-svg
+          .header__mobile-col
             a.header__cart(href="#") 
               .header__cart-icon 
                 +cart-svg.header__cart-svg
@@ -208,27 +211,31 @@ mixin header
           .header__modal-row 
             .header__modal-col 
               ul.header__modal-list
-                each item in ['Токарные станки с ЧПУ', 'Фрезерные станки с ЧПУ', 'Вертикальные токарные и карусельные станки с ЧПУ', 'Ленточнопильные станки', 'Шлифовальные станки', 'Прессовое оборудование', 'Электроэрозионные станки', 'Шлифовальные станки', 'Универсальные станки', 'Прессовое оборудование', 'Раскроечные станки', 'Электроэрозионные станки', 'Измерительное оборудование', ]
-                  li.header__modal-item 
+                each item, i in ['Токарные станки с ЧПУ', 'Фрезерные станки с ЧПУ', 'Вертикальные токарные и карусельные станки с ЧПУ', 'Ленточнопильные станки', 'Шлифовальные станки', 'Прессовое оборудование', 'Электроэрозионные станки', 'Шлифовальные станки', 'Универсальные станки', 'Прессовое оборудование', 'Раскроечные станки', 'Электроэрозионные станки', 'Измерительное оборудование', ]
+                  li.header__modal-item(class=(i === 0 ? 'active' : '') data-category-item='')
                     |#{item}
             .header__modal-col 
-              ul.header__listing
-                each item in ['С направляющими скольжения', 'С направляющими скольжения и осью Y', 'Трубообрабатывающие', 'Автоматы продольного точения', 'С направляющими качения ', 'С направляющими качения и противошпинделем', 'С направляющими качения и осью Y', 'Роботизированные с направляющими качения', 'Токарно-фрезерные с направляющими качения ']
-                  li.header__listing-item 
-                    |#{item}
+              - for (x = 0; x < 13; x++)
+                ul.header__listing(class=(x === 0 ? 'active' : '') data-category-list='')
+                  each item in ['С направляющими скольжения', 'С направляющими скольжения и осью Y', 'Трубообрабатывающие', 'Автоматы продольного точения', 'С направляющими качения ', 'С направляющими качения и противошпинделем', 'С направляющими качения и осью Y', 'Роботизированные с направляющими качения', 'Токарно-фрезерные с направляющими качения ']
+                    li.header__listing-item 
+                      a.header__listing-link(href="#") 
+                        |#{item} #{x + 1}
       .header__modal-product(data-header-modal='2')
         .header__modal-container 
           .header__modal-row 
             .header__modal-col 
               ul.header__modal-list
-                each item in ['Корпусной режущий инструмент', 'Осевой режущий инструмент', 'Вспомогательный инструмент для фрезерных станков с ЧПУ', 'Вспомогательный инструмент для токарных станков с ЧПУ', 'Приспособления', 'Аксессуары для инструмента']
-                  li.header__modal-item 
+                each item, i in ['Корпусной режущий инструмент', 'Осевой режущий инструмент', 'Вспомогательный инструмент для фрезерных станков с ЧПУ', 'Вспомогательный инструмент для токарных станков с ЧПУ', 'Приспособления', 'Аксессуары для инструмента']
+                  li.header__modal-item(class=(i === 0 ? 'active' : '') data-category-item='')
                     |#{item}
-            .header__modal-col 
-              ul.header__listing
-                each item in ['Пластины для точения', 'Токарные пластины MICRONEGA', 'Токарные пластины MICROBORING', 'Пластины для фрезерования', 'Пластины для корпусных сверл', 'Токарные державки', 'Державки MICRONEGA', 'Державки MICROBORING', 'Корпусные сверла', 'Корпусные фрезы']
-                  li.header__listing-item 
-                    |#{item}
+            .header__modal-col  
+              - for (x = 0; x < 6; x++)
+                ul.header__listing(class=(x === 0 ? 'active' : '') data-category-list='')
+                  each item in ['Пластины для точения', 'Токарные пластины MICRONEGA', 'Токарные пластины MICROBORING', 'Пластины для фрезерования', 'Пластины для корпусных сверл', 'Токарные державки', 'Державки MICRONEGA', 'Державки MICROBORING', 'Корпусные сверла', 'Корпусные фрезы']
+                    li.header__listing-item 
+                      a.header__listing-link(href="#") 
+                        |#{item} #{x + 1}
       .header__modal-product(data-header-modal='3')
         .header__modal-container 
           ul.header__modal-list.header__modal-list--transparent
