Add instruments-1 page

--- a/src/assets/styles/modules/header.scss
+++ b/src/assets/styles/modules/header.scss
@@ -664,6 +664,8 @@
     position: absolute;
     top: 100%;
 
+    width: 100%;
+
     @media (max-width: ($breakpoint - 1px)) {
       display: none;
     }
