--- a/src/views/pages/search.pug
+++ b/src/views/pages/search.pug
@@ -34,9 +34,10 @@ block content
                       ul.aside__list.aside__inner
                         each el in item.items
                           li.aside__item 
-                            |#{el.text}
-                            span.aside__count 
-                              |#{el.count}
+                            a.aside__text(href="#") 
+                              |#{el.text}
+                              span.aside__count 
+                                |#{el.count}
           .section__col
             .search-page__grid 
               - for (i = 0; i < 12; i++)
