--- a/src/assets/styles/modules/aside.scss
+++ b/src/assets/styles/modules/aside.scss
@@ -62,6 +62,12 @@
     &:hover {
       background-color: $color-light-gray;
     }
+
+    &.active {
+      .button-show__svg {
+        transform: rotate(180deg)
+      }
+    }
   }
 
   &__text {
