--- a/src/views/pages/booking-2.pug
+++ b/src/views/pages/booking-2.pug
@@ -70,7 +70,7 @@ block content
                     .cart-page__card-price 
                       |Предварительная стоимость, ₽
                   .booking-page__card-col
-                    .cart-page__card-price 
+                    .cart-page__card-num 
                       |89 0000
                 .cart-page__card-caption 
                   |Цена с НДС по курсу ЦА на 25.06.2021
