--- a/src/views/pages/cart-auth.pug
+++ b/src/views/pages/cart-auth.pug
@@ -101,13 +101,13 @@ block content
                               .tooltip__icon 
                                 +tooltip-svg
                           .tooltip__container   
-                            |Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima consectetur deserunt cumque?
+                            |Цена с НДС по курсу ЦБ на 25.06.2021
               .cart-page__card-bot
                 ul.cart-page__card-list
                   li.cart-page__card-thing 
                     .cart-page__card-row 
                       .cart-page__card-col
-                        p.cart-page__caption
+                        p.cart-page__caption.mr10
                           |Сумма без скидки, ₽
                       .cart-page__card-col
                         .cart-page__card-text 
@@ -115,7 +115,7 @@ block content
                   li.cart-page__card-thing 
                     .cart-page__card-row 
                       .cart-page__card-col
-                        p.cart-page__caption
+                        p.cart-page__caption.mr10
                           |Скидка, ₽
                       .cart-page__card-col
                         .cart-page__card-text 
