--- a/src/views/pages/profile.pug
+++ b/src/views/pages/profile.pug
@@ -113,7 +113,7 @@ block content
                     .profile-page__panel-label 
                       |Текущий размер скидки
                     .profile-page__panel-discont  
-                      .discont 
+                      .discont.discont--md
                         .discont__text 
                           |10%
                 .profile-page__col
