--- a/src/assets/styles/modules/discont.scss
+++ b/src/assets/styles/modules/discont.scss
@@ -27,6 +27,13 @@
     }
   }
 
+  &--md {
+    padding: 9px 15px;
+    @media (max-width: ($breakpoint - 1px)) {
+      padding-left: 8px 11px;
+    }
+  }
+
   &__text {
     @include fsl(18px, 140%);
     font-weight: 500;
