--- a/src/assets/styles/modules/header.scss
+++ b/src/assets/styles/modules/header.scss
@@ -78,6 +78,9 @@
 
   &__logo {
     margin-right: 60px;
+    @media (max-width: ($breakpoint-ll - 1px)) {
+      margin-right: 30px;
+    }
     @media (max-width: ($breakpoint - 1px)) {
       margin-right: 0;
     }
@@ -150,15 +153,12 @@
 
     &:nth-child(1) {
       width: calc(#{$col-part-d} * 6);
-
+      @media (max-width: ($breakpoint-xl - 1px)) {
+        width: calc(#{$col-part-d} * 7);
+      }
     }
     &:nth-child(2) {
       margin: -1px 0;
-
-      // width: calc(#{$col-part-d} * 4 - #{$col-gap-d});
-
-      // border: 1px solid $color-light-gray;
-      // cursor: pointer;
     }
     &:nth-child(3) {
       flex-grow: 1;
@@ -168,6 +168,12 @@
 
   &__accordion {
     margin-right: 32px;
+    @media (max-width: ($breakpoint-ll - 1px)) {
+      margin-right: 20px;
+    }
+    @media (max-width: ($breakpoint-l - 1px)) {
+      margin-right: 15px;
+    }
 
     &.active {
       #{$comp}__accordion-text {
@@ -225,6 +231,12 @@
 
     &:not(:first-child) {
       margin-left: 32px;
+      @media (max-width: ($breakpoint-ll - 1px)) {
+        margin-left: 20px;
+      }
+      @media (max-width: ($breakpoint-l - 1px)) {
+        margin-left: 15px;
+      }
     }
   }
   &__nav-link {
@@ -277,8 +289,17 @@
 
   &__search {
     padding-left: 32px;
+    @media (max-width: ($breakpoint-xl - 1px)) {
+      padding-left: 25px;
+    }
 
     width: calc(#{$col-part-d} * 4 - #{$col-gap-d});
+    @media (max-width: ($breakpoint-xl - 1px)) {
+      width: calc(#{$col-part-d} * 3 - #{$col-gap-d});
+    }
+    @media (max-width: ($breakpoint-ll - 1px)) {
+      width: calc(#{$col-part-d} * 4 - #{$col-gap-d});
+    }
     height: 100%;
 
     display: flex;
@@ -599,6 +620,11 @@
   }
   &__modal-container {
     padding: 24px calc(#{$col-pad-d}) 38px calc(#{$col-part-d} + #{$col-pad-d});
+    @media (max-height: 800px) {
+      overflow-y: scroll;
+      @include scrollbar-hidden;
+      max-height: 550px;
+    }
   }
   &__modal-row {
     display: flex;
@@ -609,6 +635,9 @@
 
       flex-shrink: 0;
       width: calc(#{$col-part-d} * 3);
+      @media (max-width: ($breakpoint-ll - 1px)) {
+        width: calc(#{$col-part-d} * 4);
+      }
     }
   }
   &__modal-list {
