--- a/src/assets/styles/modules/panel.scss
+++ b/src/assets/styles/modules/panel.scss
@@ -14,6 +14,9 @@
     flex-shrink: 0;
     &:nth-child(1) {
       width: calc(#{$col-part-d} * 3);
+      @media (max-width:($breakpoint-l - 1px)) {
+        width: calc(#{$col-part-d} * 3 - #{$col-gap-d});
+      }
       @media (max-width: ($breakpoint - 1px)) {
         margin-top: 11px;
         width: calc((#{$col-width-m}));
@@ -40,7 +43,9 @@
   }
 
   &__text {
+    margin-right: 20px;
     @media (max-width: ($breakpoint - 1px)) {
+      margin-right: 0;
       @include fsl(12px, 140%);
     }
   }
