--- a/src/assets/styles/pages/cart-page.scss
+++ b/src/assets/styles/pages/cart-page.scss
@@ -106,6 +106,7 @@
     justify-content: space-between;
   }
   &__card-text {
+    white-space: nowrap;
     font-weight: 500;
     @media (max-width: ($breakpoint - 1px)) {
       @include fsl(14px, 140%);
@@ -113,19 +114,29 @@
   }
   &__card-bot {
     padding: 24px 20px 20px;
+    @media (max-width: ($breakpoint-xl - 1px)) {
+      padding: 24px 10px 20px;
+    }
   }
   &__card-price {
     max-width: 165px;
 
-    @include fsl(18px, 120%);
     font-weight: 700;
+    @include fsl(18px, 120%);
+    @media (max-width: ($breakpoint-ll - 1px)) {
+      @include fsl(16px, 120%);
+    }
     @media (max-width: ($breakpoint - 1px)) {
       @include fsl(14px, 120%);
     }
   }
   &__card-num {
-    @include fsl(18px, 120%);
+    white-space: nowrap;
     font-weight: 700;
+    @include fsl(18px, 120%);
+    @media (max-width: ($breakpoint-ll - 1px)) {
+      @include fsl(16px, 120%);
+    }
     @media (max-width: ($breakpoint - 1px)) {
       @include fsl(20px, 120%);
     }
@@ -171,6 +182,9 @@
   &__warning-col {
     &:nth-child(2) {
       margin-left: 20px;
+      @media (max-width: ($breakpoint-l - 1px)) {
+        margin-left: 15px;
+      }
       @media (max-width: ($breakpoint - 1px)) {
         margin-left: 16px;
       }
@@ -212,16 +226,25 @@
 
     &:nth-child(1) {
       width: calc(#{$col-part-d} * 5);
+      @media (max-width: ($breakpoint-xl - 1px)) {
+        width: calc(#{$col-part-d} * 4);
+      }
     }
     &:nth-child(2) {
       min-width: 150px;
     }
     &:nth-child(3) {
       margin-left: 40px;
+      @media (max-width: ($breakpoint-l - 1px)) {
+        margin-left: 30px;
+      }
       min-width: 80px;
     }
     &:nth-child(4) {
       margin-left: 40px;
+      @media (max-width: ($breakpoint-l - 1px)) {
+        margin-left: 30px;
+      }
     }
   }
   &__top-label {
@@ -251,6 +274,9 @@
       #{$comp}__item-col {
         &:nth-child(1) {
           width: calc(#{$col-part-d} * 5 - #{$col-gap-d});
+          @media (max-width: ($breakpoint-xl - 1px)) {
+            width: calc(#{$col-part-d} * 4 - #{$col-gap-d});
+          }
           @media (max-width: ($breakpoint - 1px)) {
             width: 100%;
           }
@@ -297,11 +323,14 @@
 
     &:nth-child(1) {
       width: calc(#{$col-part-d} * 5);
-      display: flex;
+      @media (max-width: ($breakpoint-xl - 1px)) {
+        width: calc(#{$col-part-d} * 4);
+      }
       @media (max-width: ($breakpoint - 1px)) {
         width: 100%;
         grid-area: A;
       }
+      display: flex;
     }
     &:nth-child(2) {
       @media (max-width: ($breakpoint - 1px)) {
@@ -311,6 +340,9 @@
     }
     &:nth-child(3) {
       margin-left: 40px;
+      @media (max-width: ($breakpoint-l - 1px)) {
+        margin-left: 30px;
+      }
       @media (max-width: ($breakpoint - 1px)) {
         margin-left: 8px;
         grid-area: D;
@@ -318,13 +350,16 @@
     }
     &:nth-child(4) {
       margin-left: 40px;
+      @media (max-width: ($breakpoint-l - 1px)) {
+        margin-left: 30px;
+      }
       @media (max-width: ($breakpoint - 1px)) {
         margin-left: 0;
         grid-area: E;
       }
     }
     &:nth-child(5) {
-      padding: 20px 20px 20px 0;
+      padding: 16px 16px 16px 0;
 
       flex-grow: 1;
       display: flex;
