--- a/src/views/components/footer.pug
+++ b/src/views/components/footer.pug
@@ -49,7 +49,7 @@ mixin footer
                 .footer__contacts-label 
                   |#{item.city}
           .footer__btn 
-            a.button.button--md(href="#") 
+            a.button.button--md(href="#" data-fancy-button='phone') 
               |Заказать звонок
       .footer__bot 
         .footer__bot-col
