--- a/src/assets/styles/pages/about-page.scss
+++ b/src/assets/styles/pages/about-page.scss
@@ -49,7 +49,8 @@
       position: absolute;
       left: 4px;
       top: 30px;
-      bottom: 50px;
+      // bottom: 10%;
+      bottom: 0;
 
       @media (max-width: ($breakpoint - 1px)) {
         display: none;
@@ -62,11 +63,32 @@
     }
   }
   &__history-item {
+    position: relative;
+    z-index: 0;
 
     &:not(:first-child) {
       margin-top: 48px;
       @media (max-width: ($breakpoint - 1px)) {
         margin-top: 32px;
+      }
+    }
+
+    &--last {
+
+      &::after {
+        content: '';
+        position: absolute;
+        left: 3px;
+        top: 33px;
+        bottom: 0;
+
+        @media (max-width: ($breakpoint - 1px)) {
+          display: none;
+        }
+
+        width: 3px;
+
+        background: $color-darken-white;
       }
     }
   }
@@ -122,6 +144,8 @@
       border-radius: 50%;
       background-color: $color-blue;
     }
+
+    
   }
   &__history-text {
     @include fsl(18px, 140%);
