--- a/src/assets/styles/pages/cart-page.scss
+++ b/src/assets/styles/pages/cart-page.scss
@@ -389,6 +389,9 @@
   }
   &__item-content {
     margin-left: 40px;
+    @media (max-width: ($breakpoint-xl - 1px)) {
+      margin-left: 25px;
+    }
     @media (max-width: ($breakpoint - 1px)) {
       margin-left: 8px;
       margin-top: 12px;
