--- a/src/assets/styles/pages/contacts-page.scss
+++ b/src/assets/styles/pages/contacts-page.scss
@@ -50,11 +50,14 @@
     @media (max-width: ($breakpoint - 1px)) {
       @include fsl(14px, 140%);
     }
+    transition: $transition;
+
+    &:hover {
+      color: $color-blue;
+    }
   }
 
   &__text {
-    margin-top: 20px;
-    
     font-weight: 500;
     @include fsl(14px, 140%);
   }
