--- a/src/assets/styles/pages/publications-page.scss
+++ b/src/assets/styles/pages/publications-page.scss
@@ -35,6 +35,9 @@
 
     &:not(:first-child) {
       margin-left: 28px;
+      @media (max-width: ($breakpoint-l - 1px)) {
+        margin-left: 15px;
+      }
       @media (max-width: ($breakpoint - 1px)) {
         margin-left: 0;
       }
