--- a/src/views/pages/booking-1.pug
+++ b/src/views/pages/booking-1.pug
@@ -53,7 +53,7 @@ block content
                     .booking-page__block-col
                       input.form__input(type="text" placeholder="Имя*")
                     .booking-page__block-col
-                      input.form__input(type="text" placeholder="Телефон*")
+                      input.form__input(type="text" placeholder="Телефон*" data-mask='phone')
                   .booking-page__block-row
                     .booking-page__block-col
                       input.form__input(type="email" placeholder="E-mail*")
