--- a/src/assets/styles/modules/product-card.scss
+++ b/src/assets/styles/modules/product-card.scss
@@ -4,8 +4,11 @@
   border-radius: 4px;
   overflow: hidden;
   background: $color-white;
+  transition: $transition;
 
   &:hover {
+    filter: drop-shadow(0px 10px 24px rgba(0, 0, 0, 0.04));
+    
     #{$comp}__title {
       color: $color-blue;
     }
