--- a/src/assets/styles/pages/instruments-page.scss
+++ b/src/assets/styles/pages/instruments-page.scss
@@ -58,7 +58,7 @@
   }
   &__section-container {
     @media (max-width: ($breakpoint - 1px)) {
-      padding: 20px 16px;
+      padding: 11px 16px 20px;
 
       display: none;
     }
