--- a/src/views/components/docs-card.pug
+++ b/src/views/components/docs-card.pug
@@ -1,5 +1,5 @@
 mixin docs-card 
-  a.docs-card(href="#") 
+  a.docs-card(class=attributes.class href="#") 
     .docs-card__container 
       .docs-card__row 
         .docs-card__col
