--- a/src/views/pages/equip-cat.pug
+++ b/src/views/pages/equip-cat.pug
@@ -81,7 +81,7 @@ block content
                     .equip-page__block-text 
                       |#{item.text}
       .container 
-        .equip-page__inner
+        .equip-page__inner.equip-page__inner--lg
           +model-tabs(items = ['Модели', 'Возможные опции'])
       .equip-page__block.margin-top.margin-top--md 
         table.equip-page__table
