--- a/src/views/pages/equip-detail.pug
+++ b/src/views/pages/equip-detail.pug
@@ -23,7 +23,7 @@ block content
             .equip-page__features-col
               h4.equip-page__features-title 
                 |Предназначен для выполнения следующего вида работ:
-              ul.features-list
+              ul.features-list.features-list--small
                 each item in ['Точение диаметральных размеров (внешних и внутренних);', 'Продольные проточки;', 'Точение фасонных и конических заготовок;', 'Отрезание заготовок по размерам;', 'Растачивание готовых отверстий;', 'Нанесение резьбы (метрической, дюймовой);', 'Токарные станки по металлу с ЧПУ отличаются высокой точностью обработки поверхностей и позволяют изготавливать детали с минимальными допусками.', ]
                   li.features-list__item
                     |#{item}
@@ -37,7 +37,7 @@ block content
             .equip-page__features-col
               h4.equip-page__features-title 
                 |Предназначен для выполнения следующего вида работ:
-              ul.features-list
+              ul.features-list.features-list--small
                 each item in ['Точение диаметральных размеров (внешних и внутренних);', 'Продольные проточки;', 'Точение фасонных и конических заготовок;', 'Отрезание заготовок по размерам;', 'Растачивание готовых отверстий;', 'Нанесение резьбы (метрической, дюймовой);', 'Токарные станки по металлу с ЧПУ отличаются высокой точностью обработки поверхностей и позволяют изготавливать детали с минимальными допусками.', ]
                   li.features-list__item
                     |#{item}
@@ -48,7 +48,7 @@ block content
                 |Наша компания предлагает токарные станки по металлу различных видов.
               h4.equip-page__features-title 
                 |Вы можете приобрести станки:
-              ul.features-list
+              ul.features-list.features-list--small
                 each item in ['Точение диаметральных размеров (внешних и внутренних);', 'Продольные проточки;', 'Точение фасонных и конических заготовок;', 'Отрезание заготовок по размерам;', 'Растачивание готовых отверстий;', 'Нанесение резьбы (метрической, дюймовой);', 'Токарные станки по металлу с ЧПУ отличаются высокой точностью обработки поверхностей и позволяют изготавливать детали с минимальными допусками.', ]
                   li.features-list__item
                     |#{item}
