--- a/src/views/pages/instruments-card-1.pug
+++ b/src/views/pages/instruments-card-1.pug
@@ -49,11 +49,11 @@ block content
                     |наличие
                   .instruments-card__section-text 
                     |2 шт.
-              .instruments-card__price.margin-top.margin-top--md
+              .instruments-card__price.instruments-card__price-inner
                 .instruments-card__price-col
                   .instruments-card__price-price 
                     |€ 2263.00
-              .instruments-card__section-panel.margin-top.margin-top--md 
+              .instruments-card__section-panel.instruments-card__price-inner
                 .loyalty-card.loyalty-card--small
                   .loyalty-card__icon 
                     +warning-svg.loyalty-card__svg
