--- a/src/views/pages/publications-article.pug
+++ b/src/views/pages/publications-article.pug
@@ -50,7 +50,7 @@ block content
             .publications-page__section-content 
               p.publications-page__section-text 
                 |При установке новой ленточной пилы на станок обязательно произведите её обкатку (приработку). Это процесс пиления заготовки с пониженной скоростью вращения пилы при медленном опускании пильной рамы на заготовку. Скорость пилы снижают на 30%, а подачу рамы вполовину от рабочих режимов. Время непрерывного резания при обкатке 15-20 минут.
-            ul.features-list.publications-page__section-inner
+            ul.features-list.features-list--small.publications-page__section-inner
               each item in ['Точение диаметральных размеров (внешних и внутренних);', 'Продольные проточки;', 'Точение фасонных и конических заготовок;', 'Отрезание заготовок по размерам;', 'Растачивание готовых отверстий;']
                 li.features-list__item 
                   |#{item}
