--- a/src/assets/styles/modules/equip-card.scss
+++ b/src/assets/styles/modules/equip-card.scss
@@ -29,10 +29,16 @@
     #{$comp}__title {
       margin-bottom: 12px;
       @include fsl(18px, 120%);
+      @media (max-width: ($breakpoint - 1px)) {
+        @include fsl(14px, 120%);
+      }
     }
 
     #{$comp}__text {
       color: $color-gray;
+      @media (max-width: ($breakpoint - 1px)) {
+        @include fsl(12px, 140%);
+      }
     }
   }
 
