--- a/src/assets/styles/modules/features-list.scss
+++ b/src/assets/styles/modules/features-list.scss
@@ -1,10 +1,24 @@
 .features-list {
+  $comp: &;
+
+  &--small {
+    #{$comp}__item {
+
+      &::before {
+        @media (max-width: ($breakpoint - 1px)) {
+          --size: 4px;
+          top: 9px;
+        }
+      }
+    }
+  }
 
   &__item {
     position: relative;
     padding-left: 43px;
-
     @media (max-width: ($breakpoint - 1px)) {
+      padding-left: 27px;
+
       @include fsl(14px, 120%);
     }
 
@@ -16,15 +30,15 @@
     }
 
     &::before {
-      $size: 11px;
+      --size: 11px;
 
       content: "";
       position: absolute;
       left: 0;
       top: 6px;
 
-      width: $size;
-      height: $size;
+      width: var(--size);
+      height: var(--size);
 
       background: $color-blue;
     }
