--- a/src/assets/styles/pages/instrument-card.scss
+++ b/src/assets/styles/pages/instrument-card.scss
@@ -15,6 +15,9 @@
 
     background: $color-white;
     border-bottom: 1px solid $color-light-gray;
+    @media (max-width: ($breakpoint - 1px)) {
+      border-bottom: none;
+    }
   }
   &__section-row {
     display: flex;
@@ -136,6 +139,9 @@
       @include fsl(14px, 110%);
     }
   }
+  &__price-inner {
+    margin-top: 32px;
+  }
 
   &__bot {
     padding: 20px 130px 20px 40px;
@@ -236,7 +242,7 @@
     border-bottom: 1px solid $color-light-gray;
 
     &:not(:first-child) {
-      margin-top: 24px;
+      margin-top: 16px;
       @media (max-width: ($breakpoint - 1px)) {
         margin-top: 8px;
       }
