--- a/src/views/components/modals.pug
+++ b/src/views/components/modals.pug
@@ -119,7 +119,7 @@ mixin docs-modal
         |Материалы для скачивания
       .grid-container.grid-container--2
         - for (x = 0; x < 6; x++)
-          +docs-card
+          +docs-card.docs-card--modal
 
 mixin phone-modal 
   .phone-modal(data-fancy-modal='phone')
